# tetra-examples

./: .env-example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release-please.yml
1_getting_started/: class_based_example.py  concurrent_executions.py  endpoint_image_cpu.py  endpoint_image_gpu.py  hello_world.py  live_config_cpu.py  live_config_gpu.py  use_network_volume.py
2_ml_inference/image_generation/: comfy_example.json  comfyui_endpoint.py  stable_diffusion.py
2_ml_inference/llm_inference/: instructor_structured_output.py  openai_gpt_oss_inference.py  vllm_inference.py
2_ml_inference/text-to-audio/: chatterbox_tts_inference.py
3_workflows/llm_to_tts/: README.md  config.py  llm_service.py  main.py  orchestrator.py  tts_service.py
4_data_processing/: cudf_gpu.py
examples/: cpu_live_serverless.py  example.py  hello_world.py  image_gen.py  inspect_gpu.py  inspect_runtime_volume.py  matrix_operations.py  protein_folding.py  protein_structure_prediction.py  s3_comp_api.py  sls_cpu_endpoint.py  sls_gpu_endpoint.py  system_dep_example.py  tensor_test.py
examples/env_vars/: README.md
jupyter_notebook/: image_gen.ipynb
shared/: __init__.py
