[project]
name = "tetra-examples"
version = "0.1.0"
description = "A collection of examples of using Tetra to run workflows on RunPod"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "diffusers>=0.33.1",
    "numpy>=2.0.2",
    "pillow>=11.2.1",
    "scikit-learn>=1.6.1",
    "tetra-rp>=0.1.1",
    "torch>=2.7.0",
]
